--- a/src/app/update-product/update-product.component.html
+++ b/src/app/update-product/update-product.component.html
@@ -1,1 +1,27 @@
-<p>update-product works!</p>
+<app-nav></app-nav>
+<!-- update-product.component.html -->
+<div class="container mt-5">
+    <h2 class="text-center mb-4">Update Product</h2>
+    <form *ngIf="product" (ngSubmit)="onSubmit()">
+      <div class="mb-3">
+        <label for="productName" class="form-label">Name</label>
+        <input [(ngModel)]="product.nom" name="productName" type="text" class="form-control" id="productName" required>
+      </div>
+      <div class="mb-3">
+        <label for="productDescription" class="form-label">Description</label>
+        <input [(ngModel)]="product.description" name="productDescription" type="text" class="form-control" id="productDescription" required>
+      </div>
+      <div class="mb-3">
+        <label for="productPrice" class="form-label">Price</label>
+        <input [(ngModel)]="product.prix" name="productPrice" type="number" class="form-control" id="productPrice" required>
+      </div>
+      <div class="mb-3">
+        <label for="productQuantite" class="form-label">Quantité</label>
+        <input [(ngModel)]="product.quantite" name="productQuantite" type="number" class="form-control" id="productQuantite" required>
+      </div>
+      <button type="submit" class="btn btn-primary">Save changes</button>
+      <button type="button" class="btn btn-secondary ms-2" [routerLink]="['/']">Return to Home</button>
+
+    </form>
+  </div>
+  
