--- a/src/app/ajouter-product/ajouter-product.component.html
+++ b/src/app/ajouter-product/ajouter-product.component.html
@@ -1,35 +1,39 @@
-<app-nav></app-nav>
-<div class="container">
-  <form #addProductForm="ngForm" (ngSubmit)="addProduct(addProductForm)">
-    <div class="mb-3">
-      <label for="productName" class="form-label">Name</label>
-      <input #productName="ngModel" ngModel name="productName" type="text" class="form-control" id="productName" required>
-      <div *ngIf="productName.invalid && productName.touched" class="text-danger">
-        Product name is required.
+
+<div class="container-fluid mt-5 p-4">
+  <div class="row justify-content-center">
+    <form #addProductForm="ngForm" class="col-4" (ngSubmit)="addProduct(addProductForm)">
+      <div class="mb-3">
+        <label for="productName" class="form-label">Nom:</label>
+        <input #productName="ngModel" ngModel name="productName" type="text" class="form-control" id="productName" required>
+        <div *ngIf="productName.invalid && productName.touched" class="text-danger">
+          Nom du produit est obligatoire.
+        </div>
       </div>
-    </div>
-    <div class="mb-3">
-      <label for="productDescription" class="form-label">Description</label>
-      <textarea #productDescription="ngModel" ngModel name="productDescription" class="form-control" id="productDescription" rows="3" required></textarea>
-      <div *ngIf="productDescription.invalid && productDescription.touched" class="text-danger">
-        Product description is required.
+      <div class="mb-3">
+        <label for="productDescription" class="form-label">Description:</label>
+        <textarea #productDescription="ngModel" ngModel name="productDescription" class="form-control" id="productDescription" rows="3" required></textarea>
+        <div *ngIf="productDescription.invalid && productDescription.touched" class="text-danger">
+           Description  du produit est obligatoire.
+        </div>
       </div>
-    </div>
-    
-    <div class="mb-3">
-      <label for="productPrice" class="form-label">Price</label>
-      <input #productPrice="ngModel" ngModel name="productPrice" type="number" class="form-control" id="productPrice" required>
-      <div *ngIf="productPrice.invalid && productPrice.touched" class="text-danger">
-        Product price is required.
+
+      <div class="mb-3">
+        <label for="productPrice" class="form-label">Prix:</label>
+        <input #productPrice="ngModel" ngModel name="productPrice" type="number" class="form-control" id="productPrice" required>
+        <div *ngIf="productPrice.invalid && productPrice.touched" class="text-danger">
+          Prix du produit est obligatoire.
+        </div>
       </div>
-    </div>
-    <div class="mb-3">
-      <label for="productQuantite" class="form-label">Quantité</label>
-      <input #productQuantite="ngModel" ngModel name="productQuantite" type="number" class="form-control" id="productQuantite" required>
-      <div *ngIf="productQuantite.invalid && productQuantite.touched" class="text-danger">
-        Product quantity is required.
+      <div class="mb-3">
+        <label for="productQuantite" class="form-label">Quantité:</label>
+        <input #productQuantite="ngModel" ngModel name="productQuantite" type="number" class="form-control" id="productQuantite" required>
+        <div *ngIf="productQuantite.invalid && productQuantite.touched" class="text-danger">
+          Quantité du produit est obligatoire.
+        </div>
       </div>
-    </div>
-    <button type="submit" data-bs-dismiss="modal" class="btn btn-primary" [disabled]="addProductForm.invalid">Save changes</button>
-  </form>
+      <button type="submit" data-bs-dismiss="modal" class="btn btn-custom d-flex" [disabled]="addProductForm.invalid"><mat-icon class="me-1">save</mat-icon>Enregistrer</button>
+    </form>
+    <div class="bg-image-add col-6"></div>
+  </div>
+
 </div>
