--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,16 +1,16 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary ">
+<nav class="navbar navbar-expand-lg bg-main ">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Store</a>
+    <a class="navbar-brand text-white fw-bolder text-uppercase fs-5  hover-class" href="#">Store</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" routerLink="/">Liste produits</a>
+        <li class="nav-item ">
+          <a class="nav-link active text-white hover-class" aria-current="page" routerLink="/">Liste Produits</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/AjouterProduct">Ajouter Produit</a>
+          <a class="nav-link text-white hover-class" routerLink="/AjouterProduct">Ajouter Produit</a>
         </li>
 
 
