--- a/src/app/product-list/product-list.component.css
+++ b/src/app/product-list/product-list.component.css
@@ -1,16 +1,62 @@
 .container {
-    max-width: 800px;
-  }
-  
-  h2 {
-    margin-bottom: 20px;
-  }
-  
-  table {
-    margin-top: 20px;
-  }
-  
-  button {
-    margin-right: 5px;
-  }
-  
+  max-width: 800px;
+}
+
+h2 {
+  margin-bottom: 20px;
+}
+
+table {
+  margin-top: 20px;
+}
+
+button {
+  margin-right: 5px;
+}
+
+h2 {
+  position: relative;
+  padding: 0;
+  margin: 0;
+  font-family: "Raleway", sans-serif;
+  font-weight: 300;
+  font-size: 40px;
+  color: #080808;
+  -webkit-transition: all 0.4s ease 0s;
+  -o-transition: all 0.4s ease 0s;
+  transition: all 0.4s ease 0s;
+}
+
+
+.custom-div h2 {
+  font-size: 26px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  width: 223px;
+  text-align: center;
+  margin: auto;
+  white-space: nowrap;
+  padding-bottom: 13px;
+}
+
+.custom-div h2:before {
+  background-color: #1b5f5a;
+  content: '';
+  display: block;
+  height: 3px;
+  width: 75px;
+  margin-bottom: 5px;
+}
+
+.custom-div h2:after {
+  background-color: #1b5f5a;
+  content: '';
+  display: block;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  height: 3px;
+  width: 75px;
+  margin-bottom: 0.25em;
+}
