--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -5,7 +5,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav" *ngIf="isLoggedIn">
         <li class="nav-item ">
           <a class="nav-link active text-white hover-class" aria-current="page" routerLink="/">Liste Produits</a>
         </li>
@@ -14,6 +14,19 @@
         </li>
 
 
+      </ul>
+      <ul class="navbar-nav ms-auto" *ngIf="isLoggedIn">
+        <li class="nav-item">
+          <a class="nav-link text-white hover-class" (click)="logout()">Logout</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav ms-auto" *ngIf="!isLoggedIn">
+        <li class="nav-item">
+          <a class="nav-link text-white hover-class" routerLink="/login">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white hover-class" routerLink="/register">Register</a>
+        </li>
       </ul>
     </div>
   </div>
