--- a/src/app/update-product/update-product.component.html
+++ b/src/app/update-product/update-product.component.html
@@ -1,4 +1,6 @@
 
+<app-nav></app-nav>
+
 <!-- update-product.component.html -->
 <div class="container mt-5">
     <h2 class="text-center mb-4">Update Product</h2>
