--- a/src/app/ajouter-product/ajouter-product.component.html
+++ b/src/app/ajouter-product/ajouter-product.component.html
@@ -1,4 +1,6 @@
 
+<app-nav></app-nav>
+
 <div class="container-fluid mt-5 p-4">
   <div class="row justify-content-center">
     <form #addProductForm="ngForm" class="col-4" (ngSubmit)="addProduct(addProductForm)">
