--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,16 +1,32 @@
-<div class="container">
-    <h2>Login</h2>
-    <form [formGroup]="loginForm" (ngSubmit)="submitForm()">
-        <div class="form-group">
-            <label for="email">Email</label>
-            <input type="email" class="form-control" id="email" formControlName="email" />
+<!DOCTYPE html>
+<!-- Created By CodingLab - www.codinglabweb.com -->
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <title>Login</title> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
+  </head>
+  <body>
+    <div class="container">
+      <div class="wrapper">
+        <div class="title"><span>Se connecter</span></div>
+        <form [formGroup]="loginForm" (ngSubmit)="submitForm()">
+            <div class="row">
+            <i class="fas fa-user"></i>
+            <input type="email" class="form-control" id="email"  placeholder="Email or Phone" formControlName="email" />
+          </div>
+          <div class="row">
+            <i class="fas fa-lock"></i>
+            <input type="password" class="form-control"  placeholder="Password" id="password" formControlName="password" />
+          </div>
+          <div class="row button">
+            <button type="submit" class="btn btn-primary " style="background-color: #2a9d8e;" [disabled]="loginForm.invalid">Login</button>
         </div>
-
-        <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" class="form-control" id="password" formControlName="password" />
-        </div>
-
-        <button type="submit" class="btn btn-primary" [disabled]="loginForm.invalid">Login</button>
+        <div class="signup-link">Pas encore membre ? <a routerLink="/Register">Inscrivez-vous maintenant</a></div>
     </form>
-</div>
+      </div>
+    </div>
+
+  </body>
+</html>
