--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -17,15 +17,15 @@
       </ul>
       <ul class="navbar-nav ms-auto" *ngIf="isLoggedIn">
         <li class="nav-item">
-          <a class="nav-link text-white hover-class" (click)="logout()">Logout</a>
+          <a class="nav-link text-white hover-class" (click)="logout()">Déconnexion</a>
         </li>
       </ul>
       <ul class="navbar-nav ms-auto" *ngIf="!isLoggedIn">
         <li class="nav-item">
-          <a class="nav-link text-white hover-class" routerLink="/login">Login</a>
+          <a class="nav-link text-white hover-class" routerLink="/login">se connecter</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white hover-class" routerLink="/register">Register</a>
+          <a class="nav-link text-white hover-class" routerLink="/register">s'inscrire</a>
         </li>
       </ul>
     </div>
