--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,26 +1,39 @@
-<div class="container">
-    <h2>Register</h2>
-    <form [formGroup]="registerForm" (ngSubmit)=submitForm()>
-        <div class="form-group">
-            <label for="name">Name</label>
-            <input type="text" class="form-control" id="name" formControlName="name" />
-        </div>
+<!DOCTYPE html>
+<html lang="fr" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Inscription</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
 
-        <div class="form-group">
-            <label for="email">Email</label>
-            <input type="email" class="form-control" id="email" formControlName="email" />
-        </div>
-
-        <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" class="form-control" id="password" formControlName="password" />
-        </div>
-
-        <div class="form-group">
-            <label for="confirmPassword">Confirm Password</label>
-            <input type="password" class="form-control" id="confirmPassword" formControlName="confirmPassword" />
-        </div>
-
-        <button type="submit" class="btn btn-primary" [disabled]="registerForm.invalid">Register</button>
-    </form>
-</div>
+  </head>
+  <body>
+    <div class="container">
+      <div class="wrapper">
+        <div class="title"><span>Inscription</span></div>
+        <form [formGroup]="registerForm" (ngSubmit)="submitForm()">
+          <div class="row">
+            <i class="fas fa-user"></i>
+            <input type="text" class="form-control" id="name" placeholder="Nom" formControlName="name" />
+          </div>
+          <div class="row">
+            <i class="fas fa-envelope"></i>
+            <input type="email" class="form-control" id="email" placeholder="Email" formControlName="email" />
+          </div>
+          <div class="row">
+            <i class="fas fa-lock"></i>
+            <input type="password" class="form-control" id="password" placeholder="Mot de passe" formControlName="password" />
+          </div>
+          <div class="row">
+            <i class="fas fa-lock"></i>
+            <input type="password" class="form-control" id="confirmPassword" placeholder="Confirmez le mot de passe" formControlName="confirmPassword" />
+          </div>
+          <div class="row button">
+            <button type="submit" class="btn btn-primary"  style="background-color: #2a9d8e;" [disabled]="registerForm.invalid">S'inscrire</button>
+          </div>
+          <div class="signup-link">Déjà membre ? <a routerLink="/login">Connectez-vous maintenant</a></div>
+        </form>
+      </div>
+    </div>
+  </body>
+</html>
