--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,41 +1,37 @@
-
 <app-nav></app-nav>
 
-<div class="container mt-5">
+<div class="main-content container mt-5">
   <div class="custom-div mb-4">
-    <h2 class="text-center  ">Nos produits</h2>
+    <h2 class="text-center">Nos produits</h2>
   </div>
-
-
 
   <input [(ngModel)]="searchQuery" (input)="searchProducts()" type="text" class="form-control mb-4" placeholder="Recherche Produit">
 
-
-
-
-
-  <table class="table table-striped">
-    <thead>
-      <tr>
-        <th>Nom</th>
-        <th>Description</th>
-        <th>Prix</th>
-        <th>Quantité</th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let product of products">
-        <td>{{ product.nom }}</td>
-        <td>{{ product.description }}</td>
-        <td>{{ product.prix  }} TND</td>
-        <td>{{ product.quantite }}</td>
-        <td>
-          <button [routerLink]="['/update', product.id]" class="btn btn-outline-warning btn-sm"><mat-icon>edit</mat-icon></button>
-          <button (click)="deleteProduct(product.id)" class="btn btn-outline-danger btn-sm"><mat-icon>delete</mat-icon></button>
-
-        </td>
-      </tr>
-    </tbody>
-  </table>
+  <div class="table-container">
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>Nom</th>
+          <th>Description</th>
+          <th>Prix</th>
+          <th>Quantité</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let product of products">
+          <td>{{ product.nom }}</td>
+          <td>{{ product.description }}</td>
+          <td>{{ product.prix }} TND</td>
+          <td>{{ product.quantite }}</td>
+          <td>
+            <button [routerLink]="['/update', product.id]" class="btn btn-outline-warning btn-sm"><mat-icon>edit</mat-icon></button>
+            <button (click)="deleteProduct(product.id)" class="btn btn-outline-danger btn-sm"><mat-icon>delete</mat-icon></button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
+
+<app-footer></app-footer>
