--- a/src/app/product-list/product-list.component.css
+++ b/src/app/product-list/product-list.component.css
@@ -1,32 +1,20 @@
-.container {
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+.main-content {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   max-width: 800px;
 }
 
-h2 {
-  margin-bottom: 20px;
-}
-
-table {
+.main-content .table-container {
+  flex-grow: 1;
+  overflow-y: auto;
   margin-top: 20px;
 }
-
-button {
-  margin-right: 5px;
-}
-
-h2 {
-  position: relative;
-  padding: 0;
-  margin: 0;
-  font-family: "Raleway", sans-serif;
-  font-weight: 300;
-  font-size: 40px;
-  color: #080808;
-  -webkit-transition: all 0.4s ease 0s;
-  -o-transition: all 0.4s ease 0s;
-  transition: all 0.4s ease 0s;
-}
-
 
 .custom-div h2 {
   font-size: 26px;
@@ -59,4 +47,35 @@ h2 {
   height: 3px;
   width: 75px;
   margin-bottom: 0.25em;
+}
+
+footer {
+  background-color: #343a40; /* Adjust as needed */
+  color: #fff;
+  padding: 1rem 0;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+}
+
+h2 {
+  position: relative;
+  padding: 0;
+  margin: 0;
+  font-family: "Raleway", sans-serif;
+  font-weight: 300;
+  font-size: 40px;
+  color: #080808;
+  -webkit-transition: all 0.4s ease 0s;
+  -o-transition: all 0.4s ease 0s;
+  transition: all 0.4s ease 0s;
+}
+
+table {
+  margin-top: 20px;
+}
+
+button {
+  margin-right: 5px;
 }
