--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -18,7 +18,7 @@
           </div>
           <div class="row">
             <i class="fas fa-envelope"></i>
-            <input type="email" class="form-control" id="email" placeholder="Email" formControlName="email" />
+            <input type="email" class="form-control" id="email" placeholder="Adresse de Mail" formControlName="email" />
           </div>
           <div class="row">
             <i class="fas fa-lock"></i>
